# rag_portfolio

./: .gitignore  pyproject.toml  readme.md  requirements.txt  ui.py
app/: prompt.py  rag_chain.py  test_chain.py  ui.py
data/: about.md  achievements.md  education.md  experience.md  skills.md
data/projects/: data_comparator.md  log_injestion_and_dashboard.md
ingestion/: ingest.py
test/: test_retrieval.py
utils/: embeddings.py
vectorstore/: chroma.sqlite3
